--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,15 @@ dependencies:
   firebase_auth: ^3.1.4
   cloud_firestore: ^2.5.4
   fluttertoast: ^8.0.8
-  audioplayers: ^0.16.1
+  just_audio: ^0.9.16
+  audio_video_progress_bar: ^0.9.0
+  flutter_file_manager: 
+  get:
+  get_storage:
+  flutter_image_slideshow:
+  google_fonts: 
+  curved_navigation_bar: 
+  settings_ui: 
 
 
   
@@ -55,10 +63,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - img/
+     - images/
      - json/
      - assets/
-     - assets/TeraGhata.mp3
+     - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
